--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,39 @@
-@import '@fontsource/fira-mono';
+* {
+    /* Light colors */
+    --text1-light: #232a31;
+    --text2-light: #464e56;
+    --text3-light: #5b636a;
+    --surface1-light: #F8EDEB;
+    --surface2-light: #FAE1DD;
+    --surface3-light: #FCD5CE;
+    --surface4-light: #FEC5BB;
+    --seperator-light: #060607;
+    --positive-light: #00873c;
+    --negative-light: #eb0f29;
+    --link-light: #0f69ff;
+    --link-active-light: #125bd4;
+    --link-selected-light: #7e1fff;
+    --hover1-light: #e0f0ff;
+    --nav-light: #FEC89A;
+    /* Dark colors */
+    --text1-dark: #f5f8fa;
+    --text2-dark: #e0e4e9;
+    --text3-dark: #b9bdc5;
+    --surface1-dark: #000000;
+    --surface2-dark: #101518;
+    --surface3-dark: #1d2228;
+    --surface4-dark: #232a31;
+    --seperator-dark: #555;
+    --positive-dark: #00873c;
+    --negative-dark: #eb0f29;
+    --link-dark: #12a9ff;
+    --link-active-dark: #188fff;
+    --link-selected-dark: #5d5eff;
+    --hover1-dark: #154966;
+}
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	/* font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
@@ -13,22 +45,71 @@
 	--text-color: #444444;
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
-	--column-margin-top: 4rem;
+	--column-margin-top: 4rem; */
+
+    /* colors */
+    color-scheme: light;
+    --text1: var(--text1-light);
+    --text2: var(--text2-light);
+    --text3: var(--text3-light);
+    --surface1: var(--surface1-light);
+    --surface2: var(--surface2-light);
+    --surface3: var(--surface3-light);
+    --surface4: var(--surface4-light);
+    --seperator: var(--seperator-light);
+    --positive: var(--positive-light);
+    --negative: var(--negative-light);
+    --link: var(--link-light);
+    --link-active: var(--link-active-light);
+    --link-selected: var(--link-selected-light);
+    --max-width: 1200px;
 }
 
 body {
+    color: var(--text1);
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--primary-color);
-	background: linear-gradient(
-		180deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 10.45%,
-		var(--tertiary-color) 41.35%
-	);
+    font-size: 1rem;
+    background-color: var(--surface1);
 }
 
-body::before {
+body[theme="dark"] {
+    color-scheme: dark;
+    --text1: var(--text1-dark);
+    --text2: var(--text2-dark);
+    --text3: var(--text3-dark);
+    --surface1: var(--surface1-dark);
+    --surface2: var(--surface2-dark);
+    --surface3: var(--surface3-dark);
+    --surface4: var(--surface4-dark);
+    --seperator: var(--seperator-dark);
+    --positive: var(--positive-dark);
+    --negative: var(--negative-dark);
+    --link: var(--link-dark);
+    --link-active: var(--link-active-dark);
+    --link-selected: var(--link-selected-dark);
+}
+
+@media (prefers-color-scheme: dark) {
+    body[theme="auto"] {
+        color-scheme: dark;
+        --text1: var(--text1-dark);
+        --text2: var(--text2-dark);
+        --text3: var(--text3-dark);
+        --surface1: var(--surface1-dark);
+        --surface2: var(--surface2-dark);
+        --surface3: var(--surface3-dark);
+        --surface4: var(--surface4-dark);
+        --seperator: var(--seperator-dark);
+        --positive: var(--positive-dark);
+        --negative: var(--negative-dark);
+        --link: var(--link-dark);
+        --link-active: var(--link-active-dark);
+        --link-selected: var(--link-selected-dark);
+    }
+}
+
+/* body::before {
 	content: '';
 	width: 80vw;
 	height: 100vh;
@@ -42,7 +123,7 @@ body::before {
 		rgba(255, 255, 255, 0) 100%
 	);
 	opacity: 0.05;
-}
+} */
 
 #svelte {
 	min-height: 100vh;
@@ -50,7 +131,7 @@ body::before {
 	flex-direction: column;
 }
 
-h1,
+/* h1,
 h2,
 p {
 	font-weight: 400;
@@ -105,4 +186,4 @@ button:focus:not(:focus-visible) {
 	h1 {
 		font-size: 2.4rem;
 	}
-}
+} */
